--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,4 +11,4 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }} # only if Test job completed successfully
     steps:
-      run: echo "Your release could be created here!"
+      run: "echo 'Your release could be created here!'"
