--- a/package.json
+++ b/package.json
@@ -1,45 +1,48 @@
 {
-  "name": "cloud-region-shortener",
-  "version": "1.0.0",
-  "description": "Shorten region names of cloud providers for use in resource names",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "build": "rm -r ./dist || true; tsc",
-    "lint": "eslint 'src/**/*.ts'",
-    "lint:fix": "eslint --fix 'src/**/*.ts'"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/krsche/cloud-region-shortener.git"
-  },
-  "keywords": [
-    "cloud",
-    "region",
-    "shortener",
-    "azure",
-    "aws",
-    "gcp"
-  ],
-  "author": "krsche",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/krsche/cloud-region-shortener/issues"
-  },
-  "homepage": "https://github.com/krsche/cloud-region-shortener#readme",
-  "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.3",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.5",
-    "prettier": "^2.4.1",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.4.3"
-  }
+    "name": "cloud-region-shortener",
+    "version": "1.0.0",
+    "description": "Shorten region names of cloud providers for use in resource names",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest",
+        "build": "rm -r ./dist || true; tsc",
+        "lint": "eslint 'src/**/*.ts'",
+        "lint:fix": "eslint --fix 'src/**/*.ts'",
+        "release": "semantic-release -d",
+        "release:forreal": "semantic-release"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/krsche/cloud-region-shortener.git"
+    },
+    "keywords": [
+        "cloud",
+        "region",
+        "shortener",
+        "azure",
+        "aws",
+        "gcp"
+    ],
+    "author": "krsche",
+    "license": "Apache-2.0",
+    "bugs": {
+        "url": "https://github.com/krsche/cloud-region-shortener/issues"
+    },
+    "homepage": "https://github.com/krsche/cloud-region-shortener#readme",
+    "devDependencies": {
+        "@types/jest": "^27.0.2",
+        "@types/node": "^16.10.3",
+        "@typescript-eslint/eslint-plugin": "^4.33.0",
+        "@typescript-eslint/parser": "^4.33.0",
+        "eslint": "^7.32.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-prettier": "^4.0.0",
+        "jest": "^27.2.5",
+        "prettier": "^2.4.1",
+        "semantic-release": "^18.0.0",
+        "ts-jest": "^27.0.5",
+        "typescript": "^4.4.3"
+    }
 }
