--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,8 @@ jobs:
   release:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }} # only if Test job completed successfully
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v2
