--- a/.eslintrc
+++ b/.eslintrc
@@ -2,13 +2,17 @@
     "root": true,
     "parser": "@typescript-eslint/parser",
     "plugins": [
-      "@typescript-eslint"
+      "@typescript-eslint",
+      "prettier",
+      "import",
+      "jest"
     ],
     "extends": [ // last element has highest priority
       "eslint:recommended",
       "plugin:@typescript-eslint/eslint-recommended",
       "plugin:@typescript-eslint/recommended",
       "airbnb-base",
+      "plugin:import/typescript",
       "plugin:prettier/recommended" // this includes all prettier rules
     ],
     "rules": { // also check .prettierrc rules!
@@ -16,7 +20,18 @@
       "no-shadow": "off",
       "@typescript-eslint/no-explicit-any": "error",
       "@typescript-eslint/no-shadow": ["error"],
-      "@typescript-eslint/no-unused-vars": ["warn"]
+      "@typescript-eslint/no-unused-vars": ["warn"],
+      "import/extensions": [ // see https://stackoverflow.com/a/59268871/6906366
+        "error",
+        "ignorePackages",
+        {
+          "js": "never",
+          "mjs": "never",
+          "jsx": "never",
+          "ts": "never",
+          "tsx": "never"
+        }
+      ]
     },
     "env": {
       "jest/globals": true
