--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    needs: [lint]
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
