--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "shortener",
         "azure",
         "aws",
-        "gcp"
+        "gcp",
+        "abbreviation",
+        "abbreviator"
     ],
     "author": "krsche",
     "license": "Apache-2.0",
