--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test
 
 on:
   push:
-    branches: [main, feature, bug]
+    branches: [main, feature/*, bug/*]
   pull_request:
     branches: [main]
 
